logs/frontend-server.log
Traceback (most recent call last):
  File "/home/CellGrowth/frontend/server/main.py", line 12, in <module>
    app = create_app(config_mode)
  File "/home/CellGrowth/frontend/server/services/__init__.py", line 17, in create_app
    register_blueprints(app)
  File "/home/CellGrowth/frontend/server/services/__init__.py", line 26, in register_blueprints
    module = import_module(f'{pkg}.{name}')
  File "/usr/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/CellGrowth/frontend/server/services/permission/__init__.py", line 46
    return f\"{y:04d}-{m:02d}-{d:02d}\"
             ^
SyntaxError: unexpected character after line continuation character
 * Serving Flask app 'services'
 * Debug mode: on
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5003
 * Running on http://172.22.62.54:5003
[33mPress CTRL+C to quit[0m
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 133-758-391
127.0.0.1 - - [06/Mar/2026 02:03:18] "[32mGET / HTTP/1.1[0m" 302 -
127.0.0.1 - - [06/Mar/2026 02:03:19] "GET /login HTTP/1.1" 200 -
127.0.0.1 - - [06/Mar/2026 02:03:19] "[36mGET /static/css/bootstrap.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:19] "[36mGET /static/css/base.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:19] "[36mGET /static/css/select2.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:19] "[36mGET /static/css/flatpickr.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:19] "[36mGET /static/css/login.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:19] "[36mGET /static/js/jquery.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:19] "[36mGET /static/js/select2.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:19] "[36mGET /static/js/flatpickr.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:19] "[36mGET /static/js/pagination.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:19] "[36mGET /static/js/table-sort.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:19] "[36mGET /static/images/login.jfif HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:20] "[36mGET /static/images/favicon.ico HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:28] "[32mPOST /login HTTP/1.1[0m" 302 -
127.0.0.1 - - [06/Mar/2026 02:03:28] "GET /home HTTP/1.1" 200 -
127.0.0.1 - - [06/Mar/2026 02:03:28] "[36mGET /static/css/select2.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:28] "[36mGET /static/css/flatpickr.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:28] "[36mGET /static/css/base.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:28] "[36mGET /static/css/bootstrap.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:28] "[36mGET /static/js/flatpickr.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:28] "[36mGET /static/js/jquery.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:29] "[36mGET /static/js/select2.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:29] "[36mGET /static/js/pagination.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:29] "[36mGET /static/js/table-sort.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:35] "GET /Permission HTTP/1.1" 200 -
127.0.0.1 - - [06/Mar/2026 02:03:35] "[36mGET /static/css/bootstrap.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:35] "[36mGET /static/css/base.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:35] "[36mGET /static/css/select2.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:35] "[36mGET /static/css/flatpickr.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:35] "[36mGET /static/js/flatpickr.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:35] "[36mGET /static/js/jquery.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:35] "[36mGET /static/js/select2.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:35] "[36mGET /static/js/pagination.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:35] "[36mGET /static/js/table-sort.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:37] "GET /permission_detail?id=1 HTTP/1.1" 200 -
127.0.0.1 - - [06/Mar/2026 02:03:37] "[36mGET /static/css/bootstrap.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:38] "[36mGET /static/css/base.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:38] "[36mGET /static/css/flatpickr.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:38] "[36mGET /static/js/jquery.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:38] "[36mGET /static/js/flatpickr.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:38] "[36mGET /static/css/select2.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:38] "[36mGET /static/js/select2.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:38] "[36mGET /static/js/pagination.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:38] "[36mGET /static/js/table-sort.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:52] "GET /datasets HTTP/1.1" 200 -
127.0.0.1 - - [06/Mar/2026 02:03:52] "[36mGET /static/css/bootstrap.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:52] "[36mGET /static/css/select2.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:52] "[36mGET /static/css/base.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:52] "[36mGET /static/css/flatpickr.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:52] "[36mGET /static/js/jquery.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:52] "[36mGET /static/js/flatpickr.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:52] "[36mGET /static/js/select2.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:53] "[36mGET /static/js/pagination.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:53] "[36mGET /static/js/table-sort.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:56] "GET /dataset_detail?SetId=1 HTTP/1.1" 200 -
127.0.0.1 - - [06/Mar/2026 02:03:56] "[36mGET /static/css/bootstrap.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:56] "[36mGET /static/css/base.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:56] "[36mGET /static/css/select2.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:56] "[36mGET /static/css/flatpickr.min.css HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:56] "[36mGET /static/js/jquery.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:56] "[36mGET /static/js/flatpickr.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:56] "[36mGET /static/js/select2.min.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:56] "[36mGET /static/js/pagination.js HTTP/1.1[0m" 304 -
127.0.0.1 - - [06/Mar/2026 02:03:56] "[36mGET /static/js/table-sort.js HTTP/1.1[0m" 304 -
